# indico-chat-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bot.conf.sample  docker-compose.yml  example.conf  indico_mattermost_bot.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
docker/config/: bot.conf
indico_chat_bot/: __init__.py  bot.py  exceptions.py  storage.py  util.py
indico_chat_bot/notifiers/: __init__.py  debug.py  gitter.py  mattermost.py
indico_chat_bot/tests/: scheduling_test.py  time_parsing.py  time_parsing_test.py
indico_mattermost_bot/: bot.py  storage.py  util.py
tests/: scheduling_test.py  time_parsing_test.py
